--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3.7'
 services:
   app:
-    image: jekyll/jekyll
-    command: jekyll serve --force_polling
+    build: .
+    command: bundle exec jekyll serve --H 0.0.0.0 --watch
     volumes:
-      - $PWD:/srv/jekyll
+      - .:/app
+      - /vendor/bundle:/usr/local/bundle
     ports:
       - 4000:4000
